Convert User to Kotlin.